# lite-emb

./: .env.example  .gitignore  Dockerfile  README.md  README_zh_CN.md  compare_rerank.sh  docker-compose.yml  main.py  preload.py  pyproject.toml
docs/: desgin.md  rerank-design.md
lite_emb/: __init__.py  app.py  config.py  logger.py
lite_emb/models/: __init__.py  loader.py  manager.py  registry.py
lite_emb/routers/: embeddings.py  health.py  models.py  rerank.py
lite_emb/schemas/: __init__.py  request.py  rerank_request.py  rerank_response.py  response.py
lite_emb/services/: __init__.py  embedding_service.py  rerank_service.py
lite_emb/utils/: __init__.py  device.py  download.py  preload.py
tests/: conftest.py  test_device.py  test_embeddings_api.py  test_model_manager.py
