[project]
name = "lite-emb"
version = "0.1.0"
description = "Lightweight OpenAI-compatible embedding service powered by BGE-M3 and sentence-transformers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "torch>=2.0.0,<=2.2.2",
    "transformers>=4.41.0,<4.50.0",
    "sentence-transformers>=3.0.0",
    "huggingface-hub>=0.20.0",
    "hf-transfer>=0.1.0",
    "flagembedding>=1.3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.uv]

[tool.uv.pip]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
